# SiNES

./: .gitignore  CMakeLists.txt  README.md  SiNES.c  build.bat
code/: SiNES.cpp
code/Processors/: Processor.hpp
code/Processors/Nintendo/LR35902/: LR35902.cpp  LR35902.hpp  cpu.h  opcodes.cpp  ops.c
include/: SiNES_types.h  platform.h
processors/Nintendo/5A22/: 65c816.c
processors/Nintendo/LR35902/: LR35902.h  cpu.h  ops.c  ops.h  registers.h
src/: SiNES.c
xplat/: SiNES_types.h
